Provide DAV oriented APIs WT-1062
